BUGFIXES:

001 ==> 279216 - "Resize image" feature is missing some useful options [patch].
002 ==> 368779 - Missing translations to Plugin Categories columns in setup page.
003 ==> 165852 - Google Youtube video uploader.
004 ==> 404578 - Links broken on downloadpage for 6.0.0.
005 ==> 402069 - FAQ link on Support page is broken.
006 ==> 404503 - There is a typo in support section of website.
007 ==> 404621 - I can not import the album Google Photo.
008 ==> 404642 - digiKam flatpak: Please include mysql driver (for using an external mysql db).
009 ==> 404690 - There is an unwanted bar in the left screen edge in full screen view.
010 ==> 404736 - Merging tags keeps popping up confirmation dialogs every second.
011 ==> 404737 - digiKam does not compile with opencv 3.4.1.
012 ==> 404735 - F2 should edit tag name when tag name has focus.
013 ==> 404748 - Default Album rename dialog should be larger (or save its size when changed).
014 ==> 304811 - Offer a "stretch histogram" functionality to automatically adjust brightness & gamma.
015 ==> 374464 - Can start print wizzard.
016 ==> 316687 - ImageMagick-6.8.3.9 could not be found.
017 ==> 305137 - wish for integrated(?) clip-generator.
018 ==> 404821 - Presentation offset from full screen when OpenGL transitions selected.
019 ==> 404894 - 6.0.0 x86-64 appimage startup complains about mssing ']' (startup bash script being called).
020 ==> 368262 - Google services tool does not use kaccounts.
021 ==> 376913 - Can't create a new album in picasa/googlephoto.
022 ==> 404896 - Vertical video are displayed horizontally.
023 ==> 404859 - Using Batch Queue Manager to make a JPG copy of the images on completion the "arw" images are no longer visible in the originating album.
024 ==> 404893 - Digikam::DigikamApp::slotSolidDeviceChanged: slotSolidDeviceChanged: messages referring to directory that digikam should not care about.
025 ==> 