@@ -109,6 +109,7 @@ public:
     void   setCurvePoints(int channel, const QPolygon& vals);
     void   setCurveValues(int channel, const QPolygon& vals);
 
+    void   unsetCurvePoint(int channel, int point);
     // Properties.
 
     bool   isDirty()                                     const;
